src/TimelineParser.py
# Generated from ./TimelineParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TimelineParser ( Parser ):

    grammarFileName = "TimelineParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'event'", "'period'", "'timeline'", "'relationship'", 
                     "'main'", "'export'", "'if'", "'else'", "'for'", "'in'", 
                     "'modify'", "'high'", "'medium'", "'low'", "'cause-effect'", 
                     "'contemporaneous'", "'precedes'", "'follows'", "'includes'", 
                     "'excludes'", "'BCE'", "'CE'", "'true'", "'false'", 
                     "'title'", "'date'", "'start'", "'end'", "'importance'", 
                     "'from'", "'to'", "'type'", "'year'", "'month'", "'day'", 
                     "'='", "','", "';'", "'.'", "'('", "')'", "'{'", "'}'", 
                     "'-'", "<INVALID>", "'<'", "'>'", "'<='", "'>='", "'=='", 
                     "'!='" ]

    symbolicNames = [ "<INVALID>", "EVENT", "PERIOD", "TIMELINE", "RELATIONSHIP", 
                      "MAIN", "EXPORT", "IF", "ELSE", "FOR", "IN", "MODIFY", 
                      "HIGH", "MEDIUM", "LOW", "CAUSE_EFFECT", "CONTEMPORANEOUS", 
                      "PRECEDES", "FOLLOWS", "INCLUDES", "EXCLUDES", "BCE", 
                      "CE", "TRUE", "FALSE", "TITLE", "DATE", "START", "END", 
                      "IMPORTANCE", "FROM", "TO", "TYPE", "YEAR", "MONTH", 
                      "DAY", "EQ", "COMMA", "SEMI", "DOT", "LPAREN", "RPAREN", 
                      "LCURLY", "RCURLY", "DASH", "ADD_OP", "LT", "GT", 
                      "LE", "GE", "EQ_EQ", "NEQ", "INT", "STRING", "ID", 
                      "WS" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_eventDecl = 2
    RULE_periodDecl = 3
    RULE_timelineDecl = 4
    RULE_componentList = 5
    RULE_relationshipDecl = 6
    RULE_dateExpr = 7
    RULE_dateCalculation = 8
    RULE_yearLiteral = 9
    RULE_monthYearLiteral = 10
    RULE_fullDateLiteral = 11
    RULE_importanceValue = 12
    RULE_relationshipType = 13
    RULE_mainBlock = 14
    RULE_statement = 15
    RULE_exportStmt = 16
    RULE_ifStmt = 17
    RULE_condition = 18
    RULE_comparisonOp = 19
    RULE_expr = 20
    RULE_property = 21
    RULE_forStmt = 22
    RULE_modifyStmt = 23
    RULE_propertyAssignment = 24
    RULE_booleanLiteral = 25

    ruleNames =  [ "program", "declaration", "eventDecl", "periodDecl", 
                   "timelineDecl", "componentList", "relationshipDecl", 
                   "dateExpr", "dateCalculation", "yearLiteral", "monthYearLiteral", 
                   "fullDateLiteral", "importanceValue", "relationshipType", 
                   "mainBlock", "statement", "exportStmt", "ifStmt", "condition", 
                   "comparisonOp", "expr", "property", "forStmt", "modifyStmt", 
                   "propertyAssignment", "booleanLiteral" ]

    EOF = Token.EOF
    EVENT=1
    PERIOD=2
    TIMELINE=3
    RELATIONSHIP=4
    MAIN=5
    EXPORT=6
    IF=7
    ELSE=8
    FOR=9
    IN=10
    MODIFY=11
    HIGH=12
    MEDIUM=13
    LOW=14
    CAUSE_EFFECT=15
    CONTEMPORANEOUS=16
    PRECEDES=17
    FOLLOWS=18
    INCLUDES=19
    EXCLUDES=20
    BCE=21
    CE=22
    TRUE=23
    FALSE=24
    TITLE=25
    DATE=26
    START=27
    END=28
    IMPORTANCE=29
    FROM=30
    TO=31
    TYPE=32
    YEAR=33
    MONTH=34
    DAY=35
    EQ=36
    COMMA=37
    SEMI=38
    DOT=39
    LPAREN=40
    RPAREN=41
    LCURLY=42
    RCURLY=43
    DASH=44
    ADD_OP=45
    LT=46
    GT=47
    LE=48
    GE=49
    EQ_EQ=50
    NEQ=51
    INT=52
    STRING=53
    ID=54
    WS=55

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(TimelineParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TimelineParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(TimelineParser.DeclarationContext,i)


        def mainBlock(self):
            return self.getTypedRuleContext(TimelineParser.MainBlockContext,0)


        def getRuleIndex(self):
            return TimelineParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = TimelineParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 30) != 0):
                self.state = 52
                self.declaration()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 58
                self.mainBlock()


            self.state = 61
            self.match(TimelineParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def eventDecl(self):
            return self.getTypedRuleContext(TimelineParser.EventDeclContext,0)


        def periodDecl(self):
            return self.getTypedRuleContext(TimelineParser.PeriodDeclContext,0)


        def timelineDecl(self):
            return self.getTypedRuleContext(TimelineParser.TimelineDeclContext,0)


        def relationshipDecl(self):
            return self.getTypedRuleContext(TimelineParser.RelationshipDeclContext,0)


        def getRuleIndex(self):
            return TimelineParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = TimelineParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 67
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.eventDecl()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 64
                self.periodDecl()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.timelineDecl()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 4)
                self.state = 66
                self.relationshipDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EventDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EVENT(self):
            return self.getToken(TimelineParser.EVENT, 0)

        def ID(self):
            return self.getToken(TimelineParser.ID, 0)

        def LCURLY(self):
            return self.getToken(TimelineParser.LCURLY, 0)

        def TITLE(self):
            return self.getToken(TimelineParser.TITLE, 0)

        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(TimelineParser.EQ)
            else:
                return self.getToken(TimelineParser.EQ, i)

        def STRING(self):
            return self.getToken(TimelineParser.STRING, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(TimelineParser.SEMI)
            else:
                return self.getToken(TimelineParser.SEMI, i)

        def DATE(self):
            return self.getToken(TimelineParser.DATE, 0)

        def dateExpr(self):
            return self.getTypedRuleContext(TimelineParser.DateExprContext,0)


        def RCURLY(self):
            return self.getToken(TimelineParser.RCURLY, 0)

        def IMPORTANCE(self):
            return self.getToken(TimelineParser.IMPORTANCE, 0)

        def importanceValue(self):
            return self.getTypedRuleContext(TimelineParser.ImportanceValueContext,0)


        def getRuleIndex(self):
            return TimelineParser.RULE_eventDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEventDecl" ):
                listener.enterEventDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEventDecl" ):
                listener.exitEventDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEventDecl" ):
                return visitor.visitEventDecl(self)
            else:
                return visitor.visitChildren(self)




    def eventDecl(self):

        localctx = TimelineParser.EventDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_eventDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(TimelineParser.EVENT)
            self.state = 70
            self.match(TimelineParser.ID)
            self.state = 71
            self.match(TimelineParser.LCURLY)
            self.state = 72
            self.match(TimelineParser.TITLE)
            self.state = 73
            self.match(TimelineParser.EQ)
            self.state = 74
            self.match(TimelineParser.STRING)
            self.state = 75
            self.match(TimelineParser.SEMI)
            self.state = 76
            self.match(TimelineParser.DATE)
            self.state = 77
            self.match(TimelineParser.EQ)
            self.state = 78
            self.dateExpr()
            self.state = 79
            self.match(TimelineParser.SEMI)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 80
                self.match(TimelineParser.IMPORTANCE)
                self.state = 81
                self.match(TimelineParser.EQ)
                self.state = 82
                self.importanceValue()
                self.state = 83
                self.match(TimelineParser.SEMI)


            self.state = 87
            self.match(TimelineParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PeriodDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PERIOD(self):
            return self.getToken(TimelineParser.PERIOD, 0)

        def ID(self):
            return self.getToken(TimelineParser.ID, 0)

        def LCURLY(self):
            return self.getToken(TimelineParser.LCURLY, 0)

        def TITLE(self):
            return self.getToken(TimelineParser.TITLE, 0)

        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(TimelineParser.EQ)
            else:
                return self.getToken(TimelineParser.EQ, i)

        def STRING(self):
            return self.getToken(TimelineParser.STRING, 0)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(TimelineParser.SEMI)
            else:
                return self.getToken(TimelineParser.SEMI, i)

        def START(self):
            return self.getToken(TimelineParser.START, 0)

        def dateExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TimelineParser.DateExprContext)
            else:
                return self.getTypedRuleContext(TimelineParser.DateExprContext,i)


        def END(self):
            return self.getToken(TimelineParser.END, 0)

        def RCURLY(self):
            return self.getToken(TimelineParser.RCURLY, 0)

        def IMPORTANCE(self):
            return self.getToken(TimelineParser.IMPORTANCE, 0)

        def importanceValue(self):
            return self.getTypedRuleContext(TimelineParser.ImportanceValueContext,0)


        def getRuleIndex(self):
            return TimelineParser.RULE_periodDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPeriodDecl" ):
                listener.enterPeriodDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPeriodDecl" ):
                listener.exitPeriodDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPeriodDecl" ):
                return visitor.visitPeriodDecl(self)
            else:
                return visitor.visitChildren(self)




    def periodDecl(self):

        localctx = TimelineParser.PeriodDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_periodDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(TimelineParser.PERIOD)
            self.state = 90
            self.match(TimelineParser.ID)
            self.state = 91
            self.match(TimelineParser.LCURLY)
            self.state = 92
            self.match(TimelineParser.TITLE)
            self.state = 93
            self.match(TimelineParser.EQ)
            self.state = 94
            self.match(TimelineParser.STRING)
            self.state = 95
            self.match(TimelineParser.SEMI)
            self.state = 96
            self.match(TimelineParser.START)
            self.state = 97
            self.match(TimelineParser.EQ)
            self.state = 98
            self.dateExpr()
            self.state = 99
            self.match(TimelineParser.SEMI)
            self.state = 100
            self.match(TimelineParser.END)
            self.state = 101
            self.match(TimelineParser.EQ)
            self.state = 102
            self.dateExpr()
            self.state = 103
            self.match(TimelineParser.SEMI)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 104
                self.match(TimelineParser.IMPORTANCE)
                self.state = 105
                self.match(TimelineParser.EQ)
                self.state = 106
                self.importanceValue()
                self.state = 107
                self.match(TimelineParser.SEMI)


            self.state = 111
            self.match(TimelineParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimelineDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIMELINE(self):
            return self.getToken(TimelineParser.TIMELINE, 0)

        def ID(self):
            return self.getToken(TimelineParser.ID, 0)

        def LCURLY(self):
            return self.getToken(TimelineParser.LCURLY, 0)

        def TITLE(self):
            return self.getToken(TimelineParser.TITLE, 0)

        def EQ(self):
            return self.getToken(TimelineParser.EQ, 0)

        def STRING(self):
            return self.getToken(TimelineParser.STRING, 0)

        def SEMI(self):
            return self.getToken(TimelineParser.SEMI, 0)

        def componentList(self):
            return self.getTypedRuleContext(TimelineParser.ComponentListContext,0)


        def RCURLY(self):
            return self.getToken(TimelineParser.RCURLY, 0)

        def getRuleIndex(self):
            return TimelineParser.RULE_timelineDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimelineDecl" ):
                listener.enterTimelineDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimelineDecl" ):
                listener.exitTimelineDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTimelineDecl" ):
                return visitor.visitTimelineDecl(self)
            else:
                return visitor.visitChildren(self)




    def timelineDecl(self):

        localctx = TimelineParser.TimelineDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_timelineDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.match(TimelineParser.TIMELINE)
            self.state = 114
            self.match(TimelineParser.ID)
            self.state = 115
            self.match(TimelineParser.LCURLY)
            self.state = 116
            self.match(TimelineParser.TITLE)
            self.state = 117
            self.match(TimelineParser.EQ)
            self.state = 118
            self.match(TimelineParser.STRING)
            self.state = 119
            self.match(TimelineParser.SEMI)
            self.state = 120
            self.componentList()
            self.state = 121
            self.match(TimelineParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComponentListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TimelineParser.ID)
            else:
                return self.getToken(TimelineParser.ID, i)

        def SEMI(self):
            return self.getToken(TimelineParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(TimelineParser.COMMA)
            else:
                return self.getToken(TimelineParser.COMMA, i)

        def getRuleIndex(self):
            return TimelineParser.RULE_componentList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComponentList" ):
                listener.enterComponentList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComponentList" ):
                listener.exitComponentList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComponentList" ):
                return visitor.visitComponentList(self)
            else:
                return visitor.visitChildren(self)




    def componentList(self):

        localctx = TimelineParser.ComponentListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_componentList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(TimelineParser.ID)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==37:
                self.state = 124
                self.match(TimelineParser.COMMA)
                self.state = 125
                self.match(TimelineParser.ID)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(TimelineParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationshipDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RELATIONSHIP(self):
            return self.getToken(TimelineParser.RELATIONSHIP, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(TimelineParser.ID)
            else:
                return self.getToken(TimelineParser.ID, i)

        def LCURLY(self):
            return self.getToken(TimelineParser.LCURLY, 0)

        def FROM(self):
            return self.getToken(TimelineParser.FROM, 0)

        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(TimelineParser.EQ)
            else:
                return self.getToken(TimelineParser.EQ, i)

        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(TimelineParser.SEMI)
            else:
                return self.getToken(TimelineParser.SEMI, i)

        def TO(self):
            return self.getToken(TimelineParser.TO, 0)

        def TYPE(self):
            return self.getToken(TimelineParser.TYPE, 0)

        def relationshipType(self):
            return self.getTypedRuleContext(TimelineParser.RelationshipTypeContext,0)


        def RCURLY(self):
            return self.getToken(TimelineParser.RCURLY, 0)

        def getRuleIndex(self):
            return TimelineParser.RULE_relationshipDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationshipDecl" ):
                listener.enterRelationshipDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationshipDecl" ):
                listener.exitRelationshipDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationshipDecl" ):
                return visitor.visitRelationshipDecl(self)
            else:
                return visitor.visitChildren(self)




    def relationshipDecl(self):

        localctx = TimelineParser.RelationshipDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_relationshipDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(TimelineParser.RELATIONSHIP)
            self.state = 134
            self.match(TimelineParser.ID)
            self.state = 135
            self.match(TimelineParser.LCURLY)
            self.state = 136
            self.match(TimelineParser.FROM)
            self.state = 137
            self.match(TimelineParser.EQ)
            self.state = 138
            self.match(TimelineParser.ID)
            self.state = 139
            self.match(TimelineParser.SEMI)
            self.state = 140
            self.match(TimelineParser.TO)
            self.state = 141
            self.match(TimelineParser.EQ)
            self.state = 142
            self.match(TimelineParser.ID)
            self.state = 143
            self.match(TimelineParser.SEMI)
            self.state = 144
            self.match(TimelineParser.TYPE)
            self.state = 145
            self.match(TimelineParser.EQ)
            self.state = 146
            self.relationshipType()
            self.state = 147
            self.match(TimelineParser.SEMI)
            self.state = 148
            self.match(TimelineParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def fullDateLiteral(self):
            return self.getTypedRuleContext(TimelineParser.FullDateLiteralContext,0)


        def monthYearLiteral(self):
            return self.getTypedRuleContext(TimelineParser.MonthYearLiteralContext,0)


        def yearLiteral(self):
            return self.getTypedRuleContext(TimelineParser.YearLiteralContext,0)


        def dateCalculation(self):
            return self.getTypedRuleContext(TimelineParser.DateCalculationContext,0)


        def getRuleIndex(self):
            return TimelineParser.RULE_dateExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDateExpr" ):
                listener.enterDateExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDateExpr" ):
                listener.exitDateExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDateExpr" ):
                return visitor.visitDateExpr(self)
            else:
                return visitor.visitChildren(self)




    def dateExpr(self):

        localctx = TimelineParser.DateExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_dateExpr)
        try:
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.fullDateLiteral()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.monthYearLiteral()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 152
                self.yearLiteral()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 153
                self.dateCalculation()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DateCalculationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TimelineParser.ID, 0)

        def DOT(self):
            return self.getToken(TimelineParser.DOT, 0)

        def ADD_OP(self):
            return self.getToken(TimelineParser.ADD_OP, 0)

        def INT(self):
            return self.getToken(TimelineParser.INT, 0)

        def YEAR(self):
            return self.getToken(TimelineParser.YEAR, 0)

        def MONTH(self):
            return self.getToken(TimelineParser.MONTH, 0)

        def DAY(self):
            return self.getToken(TimelineParser.DAY, 0)

        def getRuleIndex(self):
            return TimelineParser.RULE_dateCalculation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDateCalculation" ):
                listener.enterDateCalculation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDateCalculation" ):
                listener.exitDateCalculation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDateCalculation" ):
                return visitor.visitDateCalculation(self)
            else:
                return visitor.visitChildren(self)




    def dateCalculation(self):

        localctx = TimelineParser.DateCalculationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_dateCalculation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(TimelineParser.ID)
            self.state = 157
            self.match(TimelineParser.DOT)
            self.state = 158
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 60129542144) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 159
            self.match(TimelineParser.ADD_OP)
            self.state = 160
            self.match(TimelineParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class YearLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(TimelineParser.INT, 0)

        def BCE(self):
            return self.getToken(TimelineParser.BCE, 0)

        def CE(self):
            return self.getToken(TimelineParser.CE, 0)

        def getRuleIndex(self):
            return TimelineParser.RULE_yearLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYearLiteral" ):
                listener.enterYearLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYearLiteral" ):
                listener.exitYearLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYearLiteral" ):
                return visitor.visitYearLiteral(self)
            else:
                return visitor.visitChildren(self)




    def yearLiteral(self):

        localctx = TimelineParser.YearLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_yearLiteral)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(TimelineParser.INT)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==21 or _la==22:
                self.state = 163
                _la = self._input.LA(1)
                if not(_la==21 or _la==22):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MonthYearLiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(TimelineParser.INT, 0)

        def DASH(self):
            return self.getToken(TimelineParser.DASH, 0)

        def yearLiteral(self):
            return self.getTypedRuleContext(TimelineParser.YearLiteralContext,0)


        def getRuleIndex(self):
            return TimelineParser.RULE_monthYearLiteral

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMonthYearLiteral" ):
                listener.enterMonthYearLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMonthYearLiteral" ):
                listener.exitMonthYearLiteral(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMonthYearLiteral" ):
                return visitor.visitMonthYearLiteral(self)
            else:
                return visitor.visitChildren(self)




    def monthYearLiteral(self):

        localctx = TimelineParser.MonthYearLiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_monthYearLiteral)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(TimelineParser.INT)
            self.state = 167
            self.match(TimelineParser.DASH)
            self.state = 168
            self.yearLiteral()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FullDateLiteralContext(ParserRuleContext):
        __slots__ = 'parser'
